--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ body{
     box-sizing: border-box;
     font-family: Times New Roman;
     overflow-x: hidden;
+     padding-top: 80px; /* need this for the fixed header */
 }
 
 .header{
@@ -12,6 +13,9 @@ body{
     width: 100%;
     height: 80px;
     border: 2px solid black;
+    position: fixed;
+    top: 0; 
+    z-index: 1000; /* need this for the fixed header */
     
 }
 
@@ -22,6 +26,7 @@ body{
     display: flex;
     margin: auto;
     margin-left: 550px;
+    
     
 }
 
@@ -58,6 +63,7 @@ body{
     color: rgb(42, 83, 218);
     font-size: 23px;
     margin-top: 20px;
+    text-decoration: none;
 }
 
 #menu-nav a{
@@ -69,16 +75,17 @@ body{
     height: 100%;
     text-align: center;
     text-decoration: none;
+    color: rgb(42, 83, 218);
 }
 
-#menu-nav a:visited {
-    color: inherit; /*inherits the parent color when visited link*/
-}
-
-#menu-nav a:hover{
+#question-nav {
     background-color: lightgray;
-    cursor: pointer;
 }
+
+/* #menu-nav a:visited {
+    color: inherit; 
+} */
+
 
 .questions-box{
     flex: 1;
@@ -150,10 +157,10 @@ body{
    
     padding-top: 20px;
     padding-bottom: 20px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 #send-btn {
@@ -170,9 +177,6 @@ body{
     cursor: pointer;
 }
 
-/* .question-heading{
-   
-} */
 
 .question-require{
     font-weight: normal;
@@ -182,6 +186,11 @@ body{
 .question-box-form{
     width: 800px;
   
+}
+
+#required-field-header {
+    margin-left: 320px;
+    color: red;
 }
 
 .question-text{
